--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-container {
-  background: url(../img/about-img.jpg) left top no-repeat;
+  background: url(../img/cyber.png) center right no-repeat;
 }
 
 #about .about-content {
